# DL_with_keras

./: README.md  funcao_ativacao.py  pyproject.toml
notebooks/: Classificacao_keras.ipynb  Keras_redesneurais_IRIS.ipynb  Maneiras_de_Previsao_com_Keras_e_Tensorflow.ipynb
